# hopfield

./: README.rst  pyproject.toml  setup.py
examples/: hopfield.ipynb
hopfield/: __init__.py  core.py  hopfield.py  main.py  utils.py
tests/: test_hopfield.py
